small css fixto hide select dropown on ie10+

--- a/app/assets/stylesheets/pages/search/_search_page.scss
+++ b/app/assets/stylesheets/pages/search/_search_page.scss
@@ -252,7 +252,9 @@ body {
       .menu-item {
         display: block;
         margin-top: 15px;
-
+        select::-ms-expand {
+          display: none;
+        }
         .label {
           display: block;
           margin-bottom: 5px;
